waffle utils: add wflinfo utility
glxinfo for waffle, but using the command line interface
of waffle's gl_basic test.

v2:
 * Various cleanups suggested by Chad
 * Print context flags rather than verifying them.
 * Only print extensions when --verbose is used

Signed-off-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Makefile
 
 *.so
 
+/bin/wflinfo
 /doc/html/man/waffle.7.html
 /doc/html/man/waffle_attrib_list.3.html
 /doc/html/man/waffle_config.3.html
