--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -21,3 +21,27 @@ install(
     DESTINATION ${CMAKE_INSTALL_BINDIR}
     COMPONENT utils
     )
+
+# ----------------------------------------------------------------------------
+# Target: wflgears (executable)
+# ----------------------------------------------------------------------------
+
+add_executable(wflgears wflgears.c wflgears_legacy.c wutils.c)
+target_link_libraries(wflgears ${waffle_libname} m)
+set_target_properties(wflgears
+    PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+        )
+
+if(waffle_on_mac)
+    set_target_properties(wflgears
+        PROPERTIES
+        COMPILE_FLAGS "-ObjC"
+        )
+endif()
+
+install(
+    TARGETS wflgears
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    COMPONENT utils
+    )
