utils: Move GL function pointers to a new wutils.c file
Signed-off-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Target: wflinfo (executable)
 # ----------------------------------------------------------------------------
 
-add_executable(wflinfo wflinfo.c)
+add_executable(wflinfo wflinfo.c wutils.c)
 target_link_libraries(wflinfo ${waffle_libname})
 set_target_properties(wflinfo
     PROPERTIES
