cmake: Install FindWaffle.cmake under $LIBDIR/cmake/waffle
Instead of installing to $PREFIX/share/waffle/cmake/Modules, now we
install at $LIBDIR/cmake/waffle.

For example, on debian amd64, it would appear at:
/usr/lib/x86_64-linux-gnu/cmake/waffle/FindWaffle.cmake

Signed-off-by: Jordan Justen <jordan.l.justen@intel.com>
Cc: Dylan Baker <baker.dylan.c@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,7 @@ install(
 
 install(
     FILES cmake/Modules/FindWaffle.cmake
-    DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/cmake/Modules"
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/waffle
     COMPONENT cmakefind
     )
 
